fixed horizontal scrollbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,46 +3,58 @@
 }
 #phaser {
   width:100vw;
+  max-width:100%;
   height:30vh;
+  display: flex;
+  flex-wrap:wrap;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: column;
+  margin-top:30rem;
   font-family: 'Lobster', cursive;
 }
 #my-name {
 	font-size:7rem;
-	position:relative;
-	top:15%;
 	text-shadow: 2px 2px 5px #00b8d4;
 	text-align:center;
 	z-index: 100;
+	margin-top:16rem;
 }
-
+.navbar-fixed {
+	width:100vw;
+	max-width:100%;
+}
 .card {
 	height:25rem;
 	width:25rem;
 }
-
+#play-stagger-words {
+	margin-top:3rem;
+}
 #node {
-	left:19%;
+	margin-left:-17rem;
+	margin-top:12rem;
 }
 #html {
-	left:80%;
+	left:10rem;
 }
 #css3 {
-	left:55%;
+	left:-6rem;
 }
 #react {
-	left:76%;
+	left:21rem;
 }
 #git {
-	left: 60%;
+	left: 4rem;
 }
 #mongodb {
-	left:18%;
+	left:-17rem;
 }
 #express {
-	left: 58%;
+	left: 26rem;
 }
 #redux {
-	left:22%;
+	left:-27rem;
 }
 
 #text-bug, #recipe-calc, #news-ping, #asteroids {
@@ -67,7 +79,7 @@
 	align-items: center;
 	justify-content: center;
 	flex-flow: column;
-	margin-top:57rem;
+	margin-top:50rem;
 	z-index:20;
 }
 #about-me-header, #project-head, #contact-header{
@@ -99,7 +111,7 @@
 		flex-flow: column;
 	}
 	#contact-form {
-		width:70vw;
+		width:80vw;
 	}
 	.card {
 		margin-top:5rem;
@@ -108,14 +120,28 @@
 	height:auto;
 	width:auto;
 	}
-	#html {
-		left:60%;
-	}
 	#node {
-		margin-top:9rem;
+		margin-left:-6rem;
+	}
+	#html {
+		left:3rem;
+	}
+	#css3 {
+		left:-6rem;
 	}
 	#react {
-		left:30%;
+		left:0rem;
 	}
-
+	#git {
+		left: 9rem;
+	}
+	#mongodb {
+		left:-6rem;
+	}
+	#express {
+		left: 8rem;
+	}
+	#redux {
+		left:10rem;
+	}
 }
